--- a/index.html
+++ b/index.html
@@ -65,17 +65,11 @@
           <div>
             <h2 class="about-subtitle">طراح و برنامه نویس سایت</h2>
             <p class="about-text">
-              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
-              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
-              در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد
-              نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد،
-              کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان
-              جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای
-              طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان
-              فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری
-              موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد
-              نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
-              دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+              دانشجوی علوم کامپیوتر ورودی 1400 خوارزمی هستم . به دنبال موقعیتی
+              برای کارآموزی در حوزه فرانت اند هستم .در css بر Grid , float , کلا
+              css Document flow تا حدودی مسلط هستم. در React با کتابخانه هایی از
+              جمله React-bootstrap React-Image Simple-React-Validator Rect-Redux
+              Redux-thunk و ... کار کرده ام .
             </p>
           </div>
 
@@ -126,6 +120,15 @@
               <div class="skill-name-logo">
                 <i class="fa-brands fa-react skill-logo"></i>
                 <span class="skill-name">REACT</span>
+              </div>
+              <span class="skill-percent"> 60%</span>
+
+              <div class="skill-bar react"></div>
+            </div>
+            <div class="skill-info">
+              <div class="skill-name-logo">
+                <i class="fa-brands fa-github skill-logo"></i>
+                <span class="skill-name">Git and Github</span>
               </div>
               <span class="skill-percent"> 60%</span>
 
