edit project image

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="projects-container">
           <div class="images-container">
             <div class="image-wrapper">
-              <img src="img/project-1.jfif" alt="" class="projects-image" />
+              <img src="img/Train2.0.png" alt="" class="projects-image" />
             </div>
             <div class="image-wrapper">
               <img src="img/project-2.jfif" alt="" class="projects-image" />
@@ -158,7 +158,7 @@
               <img src="img/project-5.jfif" alt="" class="projects-image" />
             </div>
             <div class="image-wrapper">
-              <img src="img/project-6.jfif" alt="" class="projects-image" />
+              <img src="img/todo.jpg" alt="" class="projects-image" />
             </div>
           </div>
         </div>
