add phone number

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <div class="home-social">
       <ul class="social-icon-list">
         <li>
-          <a href="#" class="home-social-link">
+          <a href="https://github.com/Amir6590hossein" class="home-social-link">
             <i class="fab fa-github"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="home-social-link">
+          <a href="https://t.me/Amir6590hossein" class="home-social-link">
             <i class="fab fa-telegram"></i>
           </a>
         </li>
         <li>
-          <a href="#" class="home-social-link">
+          <a href="tel:+989184648189" class="home-social-link">
             <i class="fas fa-phone"></i>
           </a>
         </li>
