--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
           <div class="skills-body">
             <h2 class="skills-subtitle">مهارت ها</h2>
             <p class="skills-text">
-              :لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              با اینکه هر کدام از مهارت های زیر دریایی بی کران هست،میزان تقریب
+              تسلط بنده بر مهارت های ذکر شده به این مقدار میباشد
             </p>
             <div class="skill-info">
               <div class="skill-name-logo">
