--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
           <div>
             <h2 class="about-subtitle">طراح و برنامه نویس سایت</h2>
             <p class="about-text">
-              دانشجوی علوم کامپیوتر ورودی 1400 خوارزمی هستم . به دنبال موقعیتی
-              برای کارآموزی در حوزه فرانت اند هستم .در css بر Grid , float , کلا
-              css Document flow تا حدودی مسلط هستم. در React با کتابخانه هایی از
-              جمله React-bootstrap React-Image Simple-React-Validator Rect-Redux
-              Redux-thunk و ... کار کرده ام .
+              دارای کارشناسی علوم کامپیوتر خوارزمی ،مسلط به Html ,
+              Css,React,React-redux, bootstrap,redux-thunk,react-bootstrap,node
+              js,...
             </p>
           </div>
 
